# performant_python

./: .dockerignore  .env.example  .gitignore  ADDITIONAL_BENCHMARKS.md  Dockerfile  PERFORMANCE_COMPARISON.md  README.md  docker-compose.yml  entrypoint.sh  openfga_store.id  pre_commit_check.sh  pyproject.toml  requirements.txt
auth-gateway/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  benchmark_gateway.py  debug_env.py
auth-gateway/config/: access_rules.json  access_rules_prev.json  zitadel-key.json
auth-gateway/docs/: E2E_TESTING.md  FEATURE_SYNC.md  PRODUCTION_DEPLOYMENT_GUIDE.md  ZITADEL_SETUP.md  ZITADEL_WEBHOOK_INTEGRATION.md
auth-gateway/openfga/: model.fga  seed_tuples.yaml  tests-incompatible.fga.yaml  tests.fga.yaml
auth-gateway/setup-scripts/: README.md  get_access_token.py  get_zitadel_pat_token.py  rollback_openfga_model.py  setup_openfga.py  setup_zitadel.py  update_openfga_model.py  zitadel_admin_token.txt
auth-gateway/src/: auth.rs  feature_sync.rs  lib.rs  main.rs  webhooks.rs
auth-gateway/test-scripts/: README.md  benchmark_gateway.py  test_action_permissions.py  test_auth_gateway.py  test_e2e_auth_gateway.py  test_webhooks.py
auth-gateway/tests/: cors_test.rs
db/: 01-init-dbs.sh  02-app-schema.sql
performance_test_suite/: README.md  benchmark.py  benchmark_json_compression.py  benchmark_memory.py  benchmark_pydantic_vs_msgspec.py  benchmark_uvloop.sh  check_aggregated_benchmarks.py  check_metadata_scan.py  check_optimizations.py  check_parquet_performance.py  check_s3_internal.py  duckdb_concurrency.py  iceberg_join_example.py  iceberg_runner.py  profile_app.sh  test_valkey_cache.py  test_valkey_cache.sh
src/: database.py  extras.py  fast_models.py  main.py  models.py  redis_cache.py  services.py  telemetry.py
src/lib/: duckdb_client.py  iceberg_utils.py  logger.py  postgres_client.py  valkey_cache.py
src/middleware/: compression.py  log_correlation.py  telemetry.py
src/samples/: extras.py  msgspec_models.py  pg_duckdb_comparison.py  pg_polars_benchmark.py  pg_polars_msgspec.py  pg_pydantic_dict.py  pydantic_models.py  samples_routes.py  services.py  (+1 more)
test_suite/: test_cache.sh  test_decorator.sh  test_redis_cache.py
