[project]
name = "performant-python"
version = "0.1.0"
description = "High-performance Python application showcasing optimization techniques"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "granian>=1.6.0",
    "pydantic>=2.10.0",
    "uvloop>=0.21.0",
    "polars>=1.17.0",
    "duckdb>=1.1.3",
    "numpy>=2.2.0",
    "pyarrow>=18.1.0",
    "orjson>=3.10.0",
    "msgspec>=0.18.6",
    "valkey>=6.0.2",
    "asyncpg>=0.31.0",
    "zstandard>=0.23.0",
    "xxhash>=3.5.0",
    "minijinja>=2.4.0",
    "tantivy>=0.22.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "colorama>=0.4.6",
    "httpx>=0.27.0",
    "py-spy>=0.3.14",
]

[dependency-groups]
dev = [
    "psutil>=5.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "refurb>=2.0.0",
    "scalene>=1.5.0",
    "bandit>=1.7.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
    "tests",
    "performance_test_suite",
]
